Revision history for {{$dist->name}}

{{$NEXT}}

4.300003  2011-10-31 23:58:19 America/New_York
          If no credentials are found on disk, UploadToCPAN will now prompt for
          credentials during the BeforeRelease phase, not during release
          (Thanks, Christopher J. Madsen!)

          AutoPrereqs can now be told what scanners or extra_scanners args to
          pass to Perl::PrereqScanner (Thanks, Christopher J. Madsen!)

          Prune perl prereqs out of BUILD_REQUIRES for EU::MM, and pick the
          highest required perl of either runtime or built requires.  (Thanks,
          Christopher J. Madsen!)

          Test routines should now properly report the calling line for
          failures ($Test::Builder::Level is being set) (Thanks, Christopher J.
          Madsen!)

          the is_filelist test assertion now works with objects that do the
          Dist::Zilla::Role::File role (Thanks, Christopher J. Madsen!)

          a new FileFinder plugin has been added, FileFinder::ByName
          (Thanks, Christopher J. Madsen!)

4.300002  2011-09-22 09:43:45 America/New_York
          fix a bug that does Weird Stuff when a 0b file exists (thanks,
          Christian Walde!)

4.300001  2011-09-19 15:46:18 America/New_York
          Several improvements to how PPI is used should speed up the
          performance of Perl file munging and scanning.  The PPI role was
          added.  (Thanks, Dave Rolsky!)

          We now use Archive::Tar::Wrapper if available, to speed up archive
          building.  (Thanks, Dave Rolsky!)

4.300000  2011-08-19 10:12:36 America/New_York
          turn on Useqq option for Dumper, to get unicode string literals set
          properly in Makefile.PL and Build.PL without using utf8.pm

          decode user input from Chrome::Term as UTF-8

          during `dzil setup`, the config.ini file is now created with an added
          umask of 077 to avoid other users reading your PAUSE credentials
